test/expected/define_ns_=c_i.out
define Int of namespace X of class C as int
           ^
12: error: namespace can not nest inside class
